--- a/src/app/Components/principal/casos/casos.component.html
+++ b/src/app/Components/principal/casos/casos.component.html
@@ -146,7 +146,16 @@
               <textarea class="form-control" placeholder="Direccion" id="floatingTextarea2" style="height: 100px"></textarea>
     <label for="floatingTextarea2">Descripcion del caso</label>
             </div>
+            <br>
           </div>
+          <br>
+          <br>
+          <div class="card">
+            <div class="card-body">
+              CUARTE PARTE EVIDENCIAS
+            </div>
+          </div>
+          <br>
           <div class="row g-2">
             <div class="col-md">
               <div class="form-floating">
