--- a/src/app/Components/principal/casos/casos.component.html
+++ b/src/app/Components/principal/casos/casos.component.html
@@ -47,35 +47,22 @@
       <div class="row g-2">
         <div class="col-md">
             <div class="form-floating">
-            <select class="form-select" id="floatingSelectGrid">
-              <option selected>Especialidad</option>
-              <option value="Administrativo">Administrativo</option>
-              <option value="Civil">Civil</option>
-              <option value="Constitucional">Constitucional</option>
-              <option value="Penal">Penal</option>
-              <option value="Procesal">Procesal</option>
-              <option value="Tributario">Tributario</option>
-              <option value="Mercantil">Mercantil</option>
-              <option value="Laboral">Laboral</option>
-              <option value="Internacional">Internacional</option>
-              <option value="Ambiental">Ambiental</option>
-              <option value="Familiar">Familiar</option>
-              <option value="Comercial">Comercial</option>
-              <option value="OTRO">OTRO</option>
-            </select>
-            <label for="floatingSelectGrid">Seleccione:</label>
+              <select class="form-select" id="especialidadSelect" [(ngModel)]="selectedEspecialidad" (change)="getAbogadosPorEspecialidad()">
+                <option value="">Especialidad</option>
+                <option *ngFor="let especialidad of especialidades" [value]="especialidad">{{ especialidad }}</option>
+              </select>
+              <label for="especialidadSelect">Seleccione la especialidad:</label>
+            </div>
           </div>
-        </div>
+
         <div class="col-md">
             <div class="form-floating">
-            <select class="form-select" id="floatingSelectGrid">
-              <option selected>Abogado</option>
-              <option value="Persona Natural">Persona Natural</option>
-              <option value="Persona Juridica">Persona Juridica</option>
-              <option value="Estado">Estado</option>
+            <select class="form-select" id="abogadoSelect" [(ngModel)]="selectedAbogado">
+            <option value="">Abogado</option>
+            <option *ngFor="let abogado of abogadosPorEspecialidad" [value]="abogado">{{ abogado }}</option>
             </select>
-            <label for="floatingSelectGrid">Seleccione:</label>
-          </div>
+            <label for="abogadoSelect">Seleccione el abogado:</label>
+            </div>
         </div>
         <br>
         <br>
