--- a/src/app/Components/principal/casos/casos.component.html
+++ b/src/app/Components/principal/casos/casos.component.html
@@ -142,7 +142,7 @@
             </div>
           </div>
           <br>
-
+<!--
          <div class="row g-2">
             <div class="col-md">
               <div class="form-floating">
@@ -152,7 +152,25 @@
                   </div>
               </div>
             </div>
-
+-->
+<div class="row g-2">
+  <div class="col-md">
+  <div class="input-group">
+  <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" #fileInput>
+  <button class="btn btn-primary" type="button" id="inputGroupFileAddon04" (click)="uploadFile(fileInput)">Subir Archivo</button>
+  </div>
+  <!-- Agregar un elemento para mostrar el mensaje de éxito -->
+  <div *ngIf="archivoCargado" class="alert alert-success mt-3">
+    Archivo cargado con éxito.
+  </div>
+  <div class="col-md">
+    <br>
+  <div class="form-floating">
+    <input type="text" class="form-control" id="floatingInputGrid" placeholder="ruta" formControlName="ruta" [value]="uploadedFileUrl">
+    <label for="floatingInputGrid">Ruta</label>
+</div>
+</div>
+  
         
 </div>
         
@@ -161,10 +179,12 @@
     </div>
     <br>
     <br>
-</div>
+  </div>   </div>
+
 <div *ngIf="showAlert" class="alert alert-success alert-dismissible fade show" role="alert">
   ¡Registro exitoso! Mensaje de éxito.
   <button type="button" class="btn-close" aria-label="Close" (click)="closeAlert()"></button>
 </div>
       <br>
     <button type="submit" class="btn btn-primary btn-lg">REGISTRAR</button>
+  </div></div>
