--- a/src/app/Components/principal/seguimiento/seguimiento.component.html
+++ b/src/app/Components/principal/seguimiento/seguimiento.component.html
@@ -5,7 +5,9 @@
       <div class="col-2 p-3 custom-container-bg" style="margin-left: 15px;">
         <app-sidebar></app-sidebar>
       </div>
-      <div class="col-9 p-3 customm2-container-bg">Seguimiento</div>
+      <div class="col-9 p-3 customm2-container-bg">Seguimiento
+        <app-subirarchivo></app-subirarchivo>
+      </div>
         
       </div>
     </div>
