--- a/src/app/Components/principal/casos/navbarcasos/navbarcasos.component.html
+++ b/src/app/Components/principal/casos/navbarcasos/navbarcasos.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/ccasos">CREAR CASO</a>
+            <a class="nav-link active" aria-current="page" href="/casos">CREAR CASO</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/rcasos">RELACION DE CASOS</a>
