--- a/src/app/Components/principal/casos/rcasos/rcasos.component.html
+++ b/src/app/Components/principal/casos/rcasos/rcasos.component.html
@@ -1,1 +1,36 @@
-<p>rcasos works!</p>
+<br>
+<br>
+<div class="container-fluid text-center">
+    <div class="row">
+      <div class="col-2 p-3 custom-container-bg" style="margin-left: 15px;">
+        <app-sidebar></app-sidebar>
+      </div>
+      <div class="col-9 p-3 customm2-container-bg">
+        <app-navbarcasos></app-navbarcasos>
+       <p></p>
+       <div class="container">
+        <div class="row">
+          <div class="col-4" *ngFor="let caso of casos">
+            <div class="card mb-3" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">{{ caso.especialidad }}</h5>
+                <p class="card-text">Nro Caso: {{ caso.codigocaso }}</p>
+                <p class="card-text">Abogado: {{ caso.abogado }}</p>
+                <p class="card-text">Fecha de Suceso: {{ formatDate(caso.fechasuceso) }}</p>
+                <p class="card-text">Cliente: {{ caso.cliente }}</p>
+                <a href="#" class="btn btn-primary">Ver Caso</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
